[package]
name = "swc-ng-inject"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"

[dependencies]
# serde = "1"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
